@@ -1003,6 +1003,7 @@ $wgMessageStructure = array(
 		'booksources-isbn',
 		'booksources-go',
 		'booksources-text',
+		'booksources-language',
 	),
 	'specialpages2' => array(
 		'categoriespagetext',
