@@ -61,6 +61,9 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 9886) Provide clear example "stub link" in Special:Preferences
 * (bug 10055) Populate email address and real name properties of User objects
   passed to the 'AbortNewAccount' hook
+* Show result of Special:Booksources in wiki content language always, it's
+  normally better maintained than the generic list from the standard message
+  files
 
 == Bugfixes since 1.10 ==
 
